# MuScalpel

./: .gitignore  Makefile.am  configure.ac
src/: DeclarationSymbolTable.c  DeclarationSymbolTable.h  DeclarationWithHeaderDefinition.c  DeclarationWthHeaderDefinition.h  DependencyList.c  DependencyList.h  DependencyListWithID.c  DependencyListWithID.h  FeatureInterface.c  FeatureInterface.h  FunctionCallDependency.c  FunctionCallDependency.h  FunctionElement.c  FunctionElement.h  GIReduction.c  GIReduction.h  GP.c  GP.h  GPIndividual.c  GPIndividual.h  GenTrans.h  GlobalDeclarations.c  GlobalDeclarations.h  IndividualInstantiator.c  IndividualInstantiator.h  ListOfFunctionSourceFile.c  ListOfFunctionSourceFile.h  ListOfInt.h  ListOfString.c  ListOfString.h  Makefile.am  Mapping.h  MappingCandidate.c  MappingCandidate.h  Mappping.c  MarkFunctionCall.c  MarkFunctionCall.h  OptionParser.c  OptionParser.h  PrepareForGP.c  (+17 more)
tools/: HostSymbolTable.txl  Makefile.am  addInterfaceToHost.txl  c.grm  cOriginal.grm  cOriginalCopy.grm  createInterface.txl  multiplFiles.txl  readReverseCallGraph.txl
